syntax = "proto3";

package ConfigProto;

option go_package = "github.com/bytelang/kplayer/types/config";

import "gogoproto/gogo.proto";

import "play.proto";
import "output.proto";
import "resource.proto";
import "plugin.proto";
import "auth.proto";

message KPConfig {
  string version = 1;
  string token_path = 2 [(gogoproto.moretags) = "mapstructure:\"token_path\""];
  Auth auth = 7 [(gogoproto.moretags) = "mapstructure:\"auth\""];
  Resource resource = 3 [(gogoproto.nullable) = false, (gogoproto.moretags) = "mapstructure:\"resource\""];
  Play play = 4 [(gogoproto.nullable) = false, (gogoproto.moretags) = "mapstructure:\"play\""];
  Output output = 5 [(gogoproto.nullable) = false, (gogoproto.moretags) = "mapstructure:\"output\""];
  Plugin plugin = 6 [(gogoproto.nullable) = false, (gogoproto.moretags) = "mapstructure:\"plugin\""];
}